--- a/app/src/main/res/layout/activity_student_login.xml
+++ b/app/src/main/res/layout/activity_student_login.xml
@@ -5,13 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="megha.jindal.AdminLogin.LoginActivity">
-
+    tools:context=".StudentLogin.StudentLoginActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:gravity="center"
         android:orientation="vertical"
         android:layout_height="match_parent">
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:inputType="text"
+                android:hint="enter Roll No"
+                android:id="@+id/roll"
+                />
+        </android.support.design.widget.TextInputLayout>
+
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -31,7 +44,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/password"
+                android:id="@+id/pass"
                 android:layout_marginBottom="10dp"
                 android:inputType="textPassword"
                 android:hint="enter password"
@@ -42,16 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:id="@+id/login"
-            android:text="login" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:id="@+id/signup"
-            android:layout_marginTop="10dip"
-            android:textAllCaps="false"
-            android:text="@string/ac" />
+            android:text="Login" />
     </LinearLayout>
 
     <ProgressBar
@@ -61,6 +65,5 @@
         android:layout_gravity="center"
         android:layout_marginBottom="20dip"
         android:visibility="gone" />
-
 
 </LinearLayout>
