--- a/app/src/main/res/layout/activity_student_profile.xml
+++ b/app/src/main/res/layout/activity_student_profile.xml
@@ -4,31 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".StudentProfile.StudentProfileActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="300dp">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/name"
+        android:layout_gravity="center"
+        android:textSize="30sp"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/roll"
+        android:textSize="30sp"
+        android:layout_gravity="center"
         />
     <TextView
+        android:textSize="30sp"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/mail"
         />
     <TextView
+        android:textSize="30sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/branch"
+        android:layout_gravity="center"
         />
     <TextView
+        android:textSize="30sp"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/cgpa"
         />
+    </LinearLayout>
+    <Button
+        android:layout_marginTop="30dp"
+        android:text="FAQ"
+        android:textSize="30sp"
+        android:id="@+id/faq"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Our Recruiters"
+        android:id="@+id/re"
+        android:textSize="30sp"
+        android:layout_marginTop="30dp"/>
+        />
+
+
 
 </LinearLayout>
